fix: overflow text, deg and remove lorem ipslum

--- a/css/blade.css
+++ b/css/blade.css
@@ -11,7 +11,7 @@ slash-blade {
   display: block;
   width: 300px;
   height: calc(100vh);
-  transform: skewX(-20deg);
+  transform: skewX(-25deg);
   opacity: 0.7;
 }
 
